--- a/parallax-template/css/style.css
+++ b/parallax-template/css/style.css
@@ -110,3 +110,12 @@ h1 {
   margin: 2.8rem 0 1.68rem 0;
   margin-top: 95px;
 }
+
+.social-links li a {
+  font-size: 60px;
+}
+
+.btn {
+  padding-bottom: 67px;
+  padding-top: 13px;
+}
