--- a/parallax-template/css/style.css
+++ b/parallax-template/css/style.css
@@ -111,6 +111,13 @@ h1 {
   margin-top: 95px;
 }
 
+h2 {
+  font-size: 3.56rem;
+  line-height: 110%;
+  margin: 2.3733333333rem 0 1.424rem 0;
+  text-align: center;
+}
+
 .social-links li a {
   font-size: 60px;
 }
@@ -119,3 +126,4 @@ h1 {
   padding-bottom: 67px;
   padding-top: 13px;
 }
+
