--- a/parallax-template/css/style.css
+++ b/parallax-template/css/style.css
@@ -25,7 +25,7 @@ html {
 }
 
 #aboutMe{
-  padding: 0px 302px 0px 292px;
+  padding: 0px 30% 0px 29%;
 }
 
 #middle {
@@ -126,4 +126,3 @@ h2 {
   padding-bottom: 67px;
   padding-top: 13px;
 }
-
